--- a/css/src/scss/partials/_sections.scss
+++ b/css/src/scss/partials/_sections.scss
@@ -1045,6 +1045,125 @@ section.skincare {
 
 }
 
+section.form {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 50px 0;
+  // min-height: 900px;
+
+  @include isXLarge {
+    padding: 80px 0;
+  }
+
+
+  .img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    margin: 0 auto;
+
+    align-items: center;
+    justify-content: center;
+
+    picture {
+      width: 100%;
+      height: 100%;
+
+
+      img {
+        object-fit: cover;
+        object-position: right;
+        height: 100%;
+        width: 100%;
+        @media screen and (max-width: 1100px) {
+          opacity: 0.3;
+        }
+        // @media screen and (max-width: 992px) {
+        //   opacity: 0.3;
+        // }
+      }
+    }
+  }
+
+  .container {
+    display: flex;
+
+
+    .formcontent {
+      width: 70%;
+
+      .content {
+        margin-bottom: 50px;
+
+        h2 {
+          font-size: 45px;
+          text-transform: uppercase;
+          margin-bottom: 50px;
+
+          @include isLarge {
+            font-size: 50px;
+          }
+        }
+
+        p {
+          width: 70%;
+
+          a {
+            color: $b;
+
+            &:hover {
+              opacity: 0.5;
+            }
+          }
+        }
+      }
+
+
+      .formpwrap {
+        display: flex;
+        gap: 30px;
+        flex-wrap: wrap;
+        flex-direction: row;
+    
+        .input {
+          width: 40%;
+        }
+      }
+
+      button.ui-btn.ui-submit {
+        background: $color-secondary;
+        border: none;
+        margin-bottom: 10px;
+        padding: 15px 12px;
+        color: $f;
+        width: 25%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 30px;
+        font-size: 16px;
+        margin-top: 30px;
+
+        &:hover {
+          opacity: 0.5;
+        }
+      }
+
+    }
+  
+
+
+  }
+
+
+
+}
+
 section.article {
   position: relative;
   display: flex;
@@ -1135,6 +1254,10 @@ section.article {
             }
           }
 
+          .article-text {
+            margin: 0;
+          }
+
           p {
             font-weight: 500;
             font-size: 14px;
@@ -1156,23 +1279,43 @@ section.article {
 
         &:nth-child(2) {
            justify-content: space-between;
+
           .col-content {
             display: flex;
             justify-content: space-between;
+            margin-bottom: 40px;
+
+            &:nth-child(3) {
+              margin-bottom: 0;
+            }
 
             .img-wrap {
-              width: 30%;
+              width: 25%;
+
+              @include isXLarge {
+                width: 30%;
+              }
 
               img   {
-                width: 150px;
-                height: 150px;
+                width: 100px;
+                height: 100px;
                 border-radius: 50%;
+
+                @include isXLarge {
+                  width: 150px;
+                  height: 150px;
+                }
               }
             }
 
             .text-wrap {
-              width: 65%;
+              width: 70%;
               // padding: 0;
+
+              @include isXLarge {
+               width: 65%;
+              }
+
 
               h4 {
             
@@ -1209,14 +1352,11 @@ section.article {
 
 }
 
-
-section.form {
+section.social {
   position: relative;
   display: flex;
-  align-items: center;
-  justify-content: center;
   padding: 50px 0;
-  min-height: 900px;
+  // min-height: 900px;
 
   @include isXLarge {
     padding: 80px 0;
@@ -1230,6 +1370,7 @@ section.form {
     right: 0;
     bottom: 0;
     display: flex;
+    // max-width: 1400px;
     margin: 0 auto;
 
     align-items: center;
@@ -1238,79 +1379,74 @@ section.form {
     picture {
       width: 100%;
       height: 100%;
-
-
       img {
         object-fit: cover;
-        object-position: right;
+        object-position: center;
         height: 100%;
         width: 100%;
-        @media screen and (max-width: 1100px) {
-          opacity: 0.3;
-        }
+        // @media screen and (max-width: 1240px) {
+        //   opacity: 0.3;
+        // }
         // @media screen and (max-width: 992px) {
         //   opacity: 0.3;
         // }
       }
     }
+
   }
+
 
   .container {
+    position: relative;
+    z-index: 1;
     display: flex;
+    // margin: 0;
+    padding: 0;
+    max-width: 100%;
+    align-items: center;
+    justify-content: center;
+
+    .content {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
 
 
-    .formcontent {
-      width: 70%;
-
-      .content {
-
-        h2 {
-          font-size: 45px;
-          text-transform: uppercase;
-
-          @include isLarge {
-            font-size: 50px;
-          }
-        }
-
-        p {
-          width: 70%;
-
-          a {
-            color: $b;
-
-            &:hover {
-              opacity: 0.5;
-            }
-          }
+      h2 {
+        text-transform: uppercase;
+        font-size: 40px;
+        font-family: $font-secondary;
+        font-weight: 500;
+        
+        @include isLarge {
+          font-size: 50px;
         }
       }
 
+      .img-wrapper {
+        margin: 50px 0;
+      }
 
-      .formpwrap {
-        display: flex;
-        gap: 30px;
-        flex-wrap: wrap;
-        flex-direction: row;
-    
-        .input {
-          width: 45%;
+
+      .btn-container {
+        margin-top: 20px;
+        background: $color-secondary;
+        border-radius: 30px;
+        padding: 0 10px;
+
+        a {
+          color: $f;
+          font-size: 16px;
+        }
+
+        @include isXLarge {
+          margin-top: 50px;
         }
       }
-
-      button.ui-btn.ui-submit {
-        background: transparent;
-        border: none;
-        margin-bottom: 10px;
-        padding-top: 20px;
-      }
-
     }
-  
-
-
   }
 
-
-
 }
+
+
