--- a/css/src/scss/partials/_footer.scss
+++ b/css/src/scss/partials/_footer.scss
@@ -3,9 +3,11 @@
 #main {
   padding: 70px 0 0;
 
+
   .container {
     display: flex;
-    max-width: 1300px;
+    // max-width: 1300px;
+    justify-content: space-between;
     @media screen and (max-width: 992px) {
       flex-direction: column;
     }
@@ -26,177 +28,139 @@
   }
 
   .leftblock {
+    width: 20%;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
+    
+    .logoblock {
 
-
-
-    a.logo {
-      display: block;
-      border-right: 1px solid #707070;
-      padding: 35px 60px 35px 0;
-      margin: 0 60px 0 0;
-
-      @media screen and (max-width: 1200px) {
-        padding: 35px 20px 35px 0;
-        margin: 0 20px 0 0;
-      }
-      @media screen and (max-width: 992px) {
-        border: none;
-      }
-      @media screen and (max-width: 1200px) {
+      .logo {
+        
         img {
-          max-width: 300px;
+          margin: 0 auto;
         }
       }
-
     }
-  }
-  .rightblock {
-    width: 100%;
-  }
-  .content-container {
-    display: flex;
-    @media screen and (max-width: 700px) {
-      flex-direction: column;
-    }
-
 
     span.block {
-      padding: 0 10px;
-      width: 35%;
+      display: flex;
+      flex-direction: column;
+      margin-top: 30px;
 
-      @media screen and (max-width: 700px) {
-        padding: 0 10px 30px; 
-      }
-
-      &.signupform {
-        min-width: 320px;
-      }
-
-      h2.sec-title {
-        font-family: "marine", sans-serif;
-        font-size: 16px;
-        color: #4d90ff;
-        letter-spacing: 0.1em;
-        line-height: 1.75;
-        margin: 0 0 10px;
-
-        font-weight: Bold;
-        font-size: 16px;
-        color: #4d90ff;
-        letter-spacing: 0.1em;
-        line-height: 1.75;
-      }
-      a.link {
-        @include linkHover;
-      }
-      a.alink {
-        font-weight: 500;
-        font-size: 16px;
-        color: #272727;
-        letter-spacing: 0em;
-        line-height: 1.875;
-        display: block;
-        line-height: 20px;
-        margin: 0 0 10px;
-
-        @include linkHover;
-      }
-      .social {
-        margin: 30px 0 0;
-      }
-      .formcontent form {
+      .cnt {
+        margin-bottom: 30px;
         display: flex;
-        border: 1px solid #444;
-
-        button.ui-btn.ui-submit {
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          background: #1f3c6a;
-          border: none;
-          height: 40px;
-          border-radius: 0;
-          width: 30px;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          padding: 0;
-
-          &:before {
-            opacity: 0;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        a {
+          text-decoration: none;
+          font-size: 15px;
+          text-align: center;
+          line-height: 1.8;
+          font-weight: 500;
+          &::before {
             display: none;
+          }
+
+          &:hover {
+            opacity: 0.5;
           }
         }
 
-        button.ui-btn.ui-submit svg {
-          transform: rotate(90deg);
-        }
+       .social {
+        display: flex;
 
-        span.inpt {
-          width: 100%;
+        a {
+          margin: 0 10px;
+          font-size: 15px;
+          line-height: 1.8;
+          font-weight: 500;
         }
-
-        span.inpt input[type="text"] {
-          padding: 8px;
-          border: none;
-        }
+       }
       }
     }
+
   }
-}
+  .rightblock {
+    width: 75%;
 
-.links-bar {
-  padding: 50px 0 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-
-  span.item {
-    padding: 0 30px;
-
-    a.link {
-      font-family: Marine;
-      font-weight: Bold;
-      font-size: 14px;
-      color: #4d90ff;
-      letter-spacing: 0.1em;
-      line-height: 2;
-      position: relative;
-      text-decoration: none;
-      text-transform: uppercase;
-
-      &:before {
-        content: close-quote;
-        position: absolute;
-        top: 100%;
-        left: 0;
-        width: 0px;
-        height: 5px;
-        background-color: var(--m);
-        transition: all 0.6s cubic-bezier(0, 0.55, 0.45, 1);
+    .content-container {
+      display: flex;
+      @media screen and (max-width: 700px) {
+        flex-direction: column;
       }
+  
+      .block-col {
+        display: flex;
 
-      &:hover {
-        &:before {
-          left: calc(100% - 20px);
-          width: 20px;
+        span.block {
+          padding: 0 10px;
+          width: 40%;
+  
+          &:nth-child(1) {
+            // width: 20%;
+          }
+    
+          @media screen and (max-width: 700px) {
+            padding: 0 10px 30px; 
+          }
+    
+          &.signupform {
+            min-width: 320px;
+          }
+    
+          h2.sec-title {
+            font-family: "marine", sans-serif;
+            font-weight: Bold;
+            font-size: 16px;
+            color: $color-secondary;
+            letter-spacing: 0.1em;
+            // line-height: 1.75;
+          }
+  
+          .cnt {
+            display: flex;
+            flex-direction: column;
+  
+  
+            a.link {
+             line-height: 1.8;
+             font-size: 15px;
+             font-weight: 500;
+  
+              &:hover {
+                text-decoration: none;
+                opacity: 0.5;
+              }
+            }
+  
+            
+          }
+  
+          &.map {
+            width: 100%;
+          }
+  
         }
       }
+
+
+
     }
   }
+
 }
+
 
 // copywrite
 .footercopy {
   padding: 7px 0;
   position: relative;
   z-index: 1;
-  background-color: var(--s);
-  margin: 30px 0 0;
+  background-color: $f;
+  margin: 50px 0 0;
 
   .socialbar {
     display: flex;
@@ -231,12 +195,14 @@
 
   .flexcen .copy__content {
     margin: 0 auto;
+    color: $color-secondary;
   }
   span.l {
     margin: 0 10px;
+    color: $color-secondary;
   }
   .copy__content a {
-    color: #fff;
+    color: $color-secondary;
   }
 
   .flexcen {
@@ -245,8 +211,7 @@
     display: flex;
     margin: 0 auto;
   }
-  .footercopy {
-  }
+
   .copy__content {
     mix-blend-mode: normal;
     font-weight: 300;
