--- a/css/src/scss/partials/_sections.scss
+++ b/css/src/scss/partials/_sections.scss
@@ -1352,6 +1352,152 @@ section.article {
 
 }
 
+section.testimonials {
+  position: relative;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 50px 0;
+  // min-height: 750px;
+
+  @include isXLarge {
+    padding: 80px 0;
+  }
+
+
+  .img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    margin: 0 auto;
+
+    align-items: center;
+    justify-content: center;
+
+    picture {
+      width: 100%;
+      height: 100%;
+      img {
+        object-fit: cover;
+        object-position: center;
+        height: 100%;
+        width: 100%;
+        // @media screen and (max-width: 1240px) {
+        //   opacity: 0.3;
+        // }
+        // @media screen and (max-width: 992px) {
+        //   opacity: 0.3;
+        // }
+      }
+    }
+
+  }
+
+
+  .container {
+    position: relative;
+    z-index: 1;
+    display: flex;
+    // margin: 0;
+    justify-content: flex-end;
+
+    .content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+
+      h2 {
+        font-size: 60px;
+        text-transform: uppercase;
+
+        @include isXLarge{
+          font-size: 70px;
+        }
+
+        @include isRetina{
+          font-size: 80px;
+        }
+      }
+
+      .col-container {
+        display: flex;
+        justify-content: space-between;
+        margin: 50px 0;
+        
+
+        .item-col {
+          width: 30%;
+
+            .icon-wrapper-qoute {
+              position: absolute;
+              z-index: 1;
+              top: bottom;
+              top: 145px;
+              margin-left: -15px;
+
+              width: 55px;
+              height: 55px;
+
+
+              @include isXLarge {
+                width: 74px;
+                height: 74px;
+              }
+            }
+
+            .text-wrapper {
+            // clip-path: polygon( 0% 0% , 100% 0, 100% 75%, 84% 75%, 87% 93%, 61% 75%, 0% 75% );
+            background: $color-fourth;
+            padding: 40px 30px 20px;
+            position: relative;
+            // width: 300px;
+            // height: 100px;
+            // background: 1;
+            border-radius: 30px;
+            // border-radius: 30px;
+
+
+            &:before {
+              content: "";
+              width: 80px;
+              height: 80px;
+              background: $color-fourth;
+              position: absolute;
+              bottom: -65px;
+              left: 80%;
+              clip-path: polygon(89% 0, 0 0, 100% 100%);
+              // -webkit-transform: translateX(-50%) rotate(45deg);
+              transform: translateX(-50%) rotate(350deg);
+            }
+          }
+
+          .icon-wrapper {
+            position: relative;
+            right: -10px;
+            display: flex;
+            justify-content: flex-end;
+            margin-top: 75px;
+
+            img {
+              width: 50px;
+              height: 50px;
+              border-radius: 50%;
+            }
+
+          }
+        }
+        
+      }
+
+    }
+  }
+
+}
+
 section.social {
   position: relative;
   display: flex;
@@ -1449,121 +1595,3 @@ section.social {
   }
 
 }
-
-section.testimonials {
-  position: relative;
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  padding: 50px 0;
-  min-height: 900px;
-
-  @include isXLarge {
-    padding: 80px 0;
-  }
-
-
-  .img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: flex;
-    margin: 0 auto;
-
-    align-items: center;
-    justify-content: center;
-
-    picture {
-      width: 100%;
-      height: 100%;
-      img {
-        object-fit: cover;
-        object-position: left;
-        height: 100%;
-        width: 100%;
-        @media screen and (max-width: 1240px) {
-          opacity: 0.3;
-        }
-        // @media screen and (max-width: 992px) {
-        //   opacity: 0.3;
-        // }
-      }
-    }
-
-  }
-
-
-  .container {
-    position: relative;
-    z-index: 1;
-    display: flex;
-    // margin: 0;
-    justify-content: flex-end;
-
-    .content {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 100%;
-
-      h2 {
-        font-size: 60px;
-        text-transform: uppercase;
-
-        @include isXLarge{
-          font-size: 70px;
-        }
-
-        @include isRetina{
-          font-size: 80px;
-        }
-      }
-
-      .col-container {
-        display: flex;
-        justify-content: space-between;
-        margin: 50px 0;
-        
-
-        .item-col {
-          width: 30%;
-
-
-
-
-            .text-wrapper {
-            // clip-path: polygon( 0% 0% , 100% 0, 100% 75%, 84% 75%, 87% 93%, 61% 75%, 0% 75% );
-            background: $color-fourth;
-            padding: 40px 30px 20px;
-            position: relative;
-            // width: 300px;
-            // height: 100px;
-            // background: 1;
-            border-radius: 30px;
-            // border-radius: 30px;
-
-
-            &:before {
-              content: "";
-              width: 80px;
-              height: 80px;
-              background: $color-fourth;
-              position: absolute;
-              bottom: -65px;
-              left: 80%;
-              clip-path: polygon(89% 0, 0 0, 100% 100%);
-              // -webkit-transform: translateX(-50%) rotate(45deg);
-              transform: translateX(-50%) rotate(350deg);
-            }
-          }
-        }
-        
-      }
-
-    }
-  }
-
-}
-
