--- a/css/src/scss/partials/_header.scss
+++ b/css/src/scss/partials/_header.scss
@@ -68,6 +68,42 @@
 			padding: 11px;
 		}
 
+    
+		div.logo-main {
+			margin: 0 15px;
+			position: relative;
+      display: none;
+      @include isXLarge {
+        margin: 0 30px;
+      }
+
+
+			@media screen and (max-width: 992px) {
+				margin: 0 auto 0 0;
+				padding-left: 0;
+        display: flex;
+			}
+			.link-logo {
+				// margin-left: 10px;
+				// display: inline-flex;
+			}
+
+			figure.logo {
+				margin: 0;
+				@media screen and (max-width: 1200px) {
+				}
+
+				@media screen and (max-width: 992px) {
+					position: relative;
+				}
+
+				img {
+					width: 100%;
+					height: 100%;
+				}
+			}
+		}
+
 		div.logo {
 			margin: 0 15px;
 			position: relative;
@@ -80,6 +116,7 @@
 			@media screen and (max-width: 992px) {
 				margin: 0 auto 0 0;
 				padding-left: 0;
+        display: none;
 			}
 			.link-logo {
 				// margin-left: 10px;
@@ -271,6 +308,10 @@
           .search-link {
             width: 20px;
             height: 20px; 
+          }
+
+          @media screen and (max-width: 992px) {
+            display: none;
           }
         }
 
