--- a/css/src/scss/partials/_sections.scss
+++ b/css/src/scss/partials/_sections.scss
@@ -311,7 +311,12 @@ section.business {
   display: flex;
   align-items: center;
   padding: 50px 0;
-  min-height: 900px;
+  min-height: 100px;
+  min-height: 700px;
+
+  @include isMedium {
+   min-height: 900px;
+  }
 
   @include isXLarge {
     padding: 80px 0;
@@ -359,13 +364,22 @@ section.business {
     padding: 0;
 
     .content {
-      width: 50%;
+      width: 95%;
       display: flex;
       flex-direction: column;
       align-items: center;
       background-color: $color-secondary;
-      padding: 50px;
       border-radius: 0 200px 200px 0;
+      padding: 50px 50px 50px 20px;
+
+      @include isMedium {
+        width: 70%;
+        padding: 50px;
+      }
+
+      @include isXLarge {
+        width: 50%;
+      } 
 
 
       h2 {
@@ -389,7 +403,10 @@ section.team {
   position: relative;
   display: flex;
   padding: 50px 0;
-  min-height: 900px;
+
+  @include isLarge {
+    min-height: 900px;
+  }
 
   @include isXLarge {
     padding: 80px 0;
@@ -590,7 +607,11 @@ section.virtual {
   align-items: center;
   justify-content: center;
   padding: 50px 0;
-  min-height: 900px;
+  min-height: 700px;
+
+  @include isLarge {
+    min-height: 900px;
+  }
 
   @include isXLarge {
     padding: 80px 0;
@@ -640,10 +661,16 @@ section.virtual {
       display: flex;
       flex-direction: column;
       align-items: center;
-      width: 50%;
+      width: 100%;
+
+
+      @include isLarge {
+        width: 50%;
+      }
 
       h2 {
         font-size: 60px;
+        text-align: center;
 
         @include isXLarge{
           font-size: 70px;
@@ -668,7 +695,11 @@ section.hydrafacial {
   align-items: flex-start;
   justify-content: center;
   padding: 50px 0;
-  min-height: 900px;
+  
+
+  @include isLarge {
+    min-height: 900px;
+  }
 
   @include isXLarge {
     padding: 80px 0;
@@ -695,9 +726,9 @@ section.hydrafacial {
         object-position: center;
         height: 100%;
         width: 100%;
-        // @media screen and (max-width: 1150px) {
-        //   opacity: 0.3;
-        // }
+        @media screen and (max-width: 1150px) {
+          opacity: 0.3;
+        }
         // @media screen and (max-width: 992px) {
         //   opacity: 0.3;
         // }
@@ -728,9 +759,35 @@ section.hydrafacial {
         width: 100%;
         display: flex;
         justify-content: space-between;
+
+
+                     
+        @media screen and (max-width: 1120px) {
+          flex-direction: column;
+          align-items: center;
+        }
         
         .col-item {
           width: 30%;
+
+          @media screen and (max-width: 1120px) {
+            width: 80%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-bottom: 50px;
+
+            .col-content {
+              width: 100%;
+              p {
+                text-align: center;
+              }
+            }
+          }
+
+          @media screen and (max-width: 700px) {
+            width: 100%;
+          }
 
 
           @include isRetina {
@@ -740,6 +797,10 @@ section.hydrafacial {
 
           .btn-container {
             margin-top: 50px;
+
+            @media screen and (max-width: 1120px) {
+              margin-top: 0;
+            }
           }
 
           &:nth-child(2) {
@@ -816,7 +877,11 @@ section.hydrafacial {
                       height: 5px;
                       width: 50px;
                       margin: 0 5px;
-              
+            
+                    }
+
+                    @media screen and (max-width: 1120px) {
+                      background: $color-secondary;
                     }
                   }
 
@@ -867,7 +932,10 @@ section.skincare {
   position: relative;
   display: flex;
   padding: 50px 0 0;
-  min-height: 900px;
+
+  @include isLarge {
+    min-height: 900px;
+  }
 
   @include isXLarge {
     padding: 80px 0 0;
