--- a/css/src/scss/partials/_footer.scss
+++ b/css/src/scss/partials/_footer.scss
@@ -32,6 +32,11 @@
     display: flex;
     align-items: flex-start;
     justify-content: center;
+
+
+    @media screen and (max-width: 992px) {
+      width: 100%;
+    }
     
     .logoblock {
 
@@ -86,26 +91,39 @@
   .rightblock {
     width: 75%;
 
+    @media screen and (max-width: 992px) {
+      width: 100%;
+    }
+
     .content-container {
       display: flex;
-      @media screen and (max-width: 700px) {
+
+      @media screen and (max-width: 992px) {
         flex-direction: column;
       }
   
       .block-col {
         display: flex;
 
+        @media screen and (max-width: 992px) {
+          flex-direction: column;
+          align-items: center;
+        }
+
         span.block {
           padding: 0 10px;
           width: 40%;
+
+          @media screen and (max-width: 992px) {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+          }
   
           &:nth-child(1) {
             // width: 20%;
           }
     
-          @media screen and (max-width: 700px) {
-            padding: 0 10px 30px; 
-          }
     
           &.signupform {
             min-width: 320px;
@@ -123,12 +141,21 @@
           .cnt {
             display: flex;
             flex-direction: column;
+
+            @media screen and (max-width: 992px) {
+              align-items: center;
+              margin-bottom: 30px;
+            }
   
   
             a.link {
              line-height: 1.8;
              font-size: 15px;
              font-weight: 500;
+
+             @media screen and (max-width: 992px) {
+              text-align: center;
+            }
   
               &:hover {
                 text-decoration: none;
@@ -162,6 +189,9 @@
   background-color: $f;
   margin: 50px 0 0;
 
+  @media screen and (max-width: 700px) {
+    margin-top: 0;
+  }
   .socialbar {
     display: flex;
     @media screen and (max-width: 700px) {
@@ -187,19 +217,28 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    
     @media screen and (max-width: 700px) {
       flex-direction: column;
-      padding: 20px;
     }
   }
 
   .flexcen .copy__content {
     margin: 0 auto;
     color: $color-secondary;
+
+    @media screen and (max-width: 700px) {
+      display: flex;
+      flex-direction: column;
+    }
   }
   span.l {
     margin: 0 10px;
     color: $color-secondary;
+
+    @media screen and (max-width: 700px) {
+      display: none;
+    }
   }
   .copy__content a {
     color: $color-secondary;
