--- a/css/src/scss/partials/_header.scss
+++ b/css/src/scss/partials/_header.scss
@@ -199,7 +199,7 @@
 					transition: all 0.3s;
 					width: 32px;
 					height: 5px;
-					background: #323031;
+					background: $color-secondary;
 					&:nth-child(3) {
 						width: 24px;
 						margin-left: auto;
@@ -234,7 +234,7 @@
 						transition: all 0.3s;
 						display: block;
 						margin: 8px 0;
-						// background-color: $f;
+						background-color: $color-secondary;
 					}
 
 					span.bar:nth-child(3) {
@@ -356,7 +356,7 @@
 						a {
 							text-align: center;
 							text-decoration: none;
-							color: $b;
+							color: $color-secondary;
 							&:hover {
 								opacity: 0.5;
 							}
@@ -450,6 +450,10 @@
 						a.menulink {
 							color: #000;
               margin-right: 0;
+
+							@media screen and (max-width: 992px) {
+								color: $color-secondary;
+							}
 						}
 					}
 
@@ -491,6 +495,8 @@
 							line-height: 1.4;
 							padding: 0;
 							margin: 5px 0;
+
+							color: $color-secondary;
 						}
 
 						// &::after {
@@ -598,7 +604,7 @@
 									letter-spacing: -0.02em;
 									line-height: 1.4;
 									text-align: left;
-									color: #4c4c4e;
+									color: $color-secondary;
 
 									&:hover {
 										background: $m;
@@ -840,7 +846,7 @@
 										letter-spacing: -0.02em;
 										line-height: 1.4;
 										text-align: left;
-										color: #4c4c4e;
+										color: $color-secondary;
 									}
 									&:hover {
 										background-color: $m;
