--- a/css/src/scss/partials/_sections.scss
+++ b/css/src/scss/partials/_sections.scss
@@ -1456,7 +1456,7 @@ section.article {
             }
 
             .img-wrap {
-              width: 10%;
+              width: 15%;
 
               @include isSmall {
                 width: 25%;
@@ -1467,9 +1467,14 @@ section.article {
               }
 
               img   {
-                width: 100px;
-                height: 100px;
+                width: 60px;
+                height: 60px;
                 border-radius: 50%;
+
+                @include isSmall {
+                  width: 100px;
+                  height: 100px;
+                }
 
                 @include isXLarge {
                   width: 150px;
@@ -1479,8 +1484,12 @@ section.article {
             }
 
             .text-wrap {
-              width: 70%;
+              width: 80%;
               // padding: 0;
+
+              @include isSmall {
+                width: 70%;
+              }
 
               @include isXLarge {
                width: 65%;
@@ -1772,6 +1781,7 @@ section.social {
         font-size: 40px;
         font-family: $font-secondary;
         font-weight: 500;
+        text-align: center;
         
         @include isLarge {
           font-size: 50px;
