--- a/css/src/scss/partials/_footer.scss
+++ b/css/src/scss/partials/_footer.scss
@@ -118,6 +118,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            width: 70%;
           }
   
           &:nth-child(1) {
@@ -130,12 +131,16 @@
           }
     
           h2.sec-title {
-            font-family: "marine", sans-serif;
+            font-family: $font-secondary;
             font-weight: Bold;
             font-size: 16px;
             color: $color-secondary;
             letter-spacing: 0.1em;
-            // line-height: 1.75;
+
+            @media screen and (max-width: 992px) {
+              margin-top: 0;
+            }
+  
           }
   
           .cnt {
